fixed spacing on homepage, added border to bottom content box

--- a/software/cananolab-webapp/web/styles/main.css
+++ b/software/cananolab-webapp/web/styles/main.css
@@ -541,6 +541,8 @@ SIDEBAR BEGINS
     /* constant: medium gray */;;;;;;;;
 }
 
+
+
     .sidebarSectionNoTop ul {
         margin: .2em 0 .2em 2em; padding: 0;
         font-size: 1em;
@@ -592,6 +594,11 @@ td.sidebarContent {
     /* for the areas under the sidebar titles and requires text */
     font-family: arial,helvetica,verdana,sans-serif;
     line-height: 1.5em;
+}
+
+td.sidebarContent.last {
+    border-bottom:1px solid #88BCE2;
+    padding-bottom:10px;
 }
 
 .sidebarContent ul li {
